--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.2",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
+    "method-override": "^2.3.7",
     "mongoose": "^4.7.2",
     "morgan": "^1.7.0"
   }
